common/force-app/main/default/objects/Raise__c/fields/Form_Solution__c.field-meta.xml
<CustomField>
    <fullName>Form_Solution__c</fullName>
    <description>This field describes the solution the company provides.</description>
    <inlineHelpText>Detail the solution your company offers to address the identified problem or opportunity.</inlineHelpText>
    <label>Solution</label>
    <length>1200</length>
    <type>LongTextArea</type>
</CustomField>