common/force-app/main/default/objects/Raise__c/fields/Form_Stage__c.field-meta.xml
<CustomField>
    <fullName>Form_Stage__c</fullName>
    <description>This field indicates the current stage of the company.</description>
    <inlineHelpText>Specify the current stage of your company, such as startup, growth, or established.</inlineHelpText>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Seed</fullName>
            </value>
            <value>
                <fullName>Seed</fullName>
            </value>
            <value>
                <fullName>Post-Seed</fullName>
            </value>
            <value>
                <fullName>Series A</fullName>
            </value>
            <value>
                <fullName>Series B+</fullName>
            </value>
            <value>
                <fullName>Pre-IPO</fullName>
            </value>
            <value>
                <fullName>IPO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>