common/force-app/main/default/objects/Raise__c/fields/Form_Target_amount__c.field-meta.xml
<CustomField>
    <fullName>Form_Target_amount__c</fullName>
    <description>This field indicates the target amount for the raise.</description>
    <inlineHelpText>Specify the total target amount your company aims to raise.</inlineHelpText>
    <label>Target amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>