common/force-app/main/default/objects/Raise__c/fields/Form_Term_Months__c.field-meta.xml
<CustomField>
    <fullName>Form_Term_Months__c</fullName>
    <description>The number of months until the preference shares convert into equity or mature.</description>
    <inlineHelpText>Specify the number of months until the preference shares convert into equity or mature.</inlineHelpText>
    <label>Term (Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>