common/force-app/main/default/objects/Raise__c/fields/Form_Terms_and_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Form_Terms_and_Conditions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This confirms that the terms and conditions have been agreed to.</description>
    <inlineHelpText>Please agree to the terms and conditions.</inlineHelpText>
    <label>Terms and Conditions</label>
    <type>Checkbox</type>
</CustomField>