common/force-app/main/default/objects/Raise__c/fields/Form_Total_addressable_market__c.field-meta.xml
<CustomField>
    <fullName>Form_Total_addressable_market__c</fullName>
    <description>This field indicates the total addressable market for the company’s product or service.</description>
    <inlineHelpText>Specify the total addressable market for your product or service.</inlineHelpText>
    <label>Total addressable market</label>
    <length>1200</length>
    <type>LongTextArea</type>
</CustomField>