common/force-app/main/default/objects/Raise__c/fields/Form_Valuation__c.field-meta.xml
<CustomField>
    <fullName>Form_Valuation__c</fullName>
    <description>This field indicates the company’s valuation.</description>
    <inlineHelpText>Specify the current valuation of your company.</inlineHelpText>
    <label>Valuation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>