common/force-app/main/default/objects/Raise__c/fields/Form_Valuation_cap__c.field-meta.xml
<CustomField>
    <fullName>Form_Valuation_cap__c</fullName>
    <description>Please insert the valuation cap that applies to these notes.</description>
    <inlineHelpText>Please insert the valuation cap that applies to these notes.</inlineHelpText>
    <label>Valuation cap</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>