common/force-app/main/default/objects/Raise__c/fields/Form_VentureCrowd_trust_unit_price__c.field-meta.xml
<CustomField>
    <fullName>Form_VentureCrowd_trust_unit_price__c</fullName>
    <description>This field indicates the unit price for VentureCrowd trust.</description>
    <inlineHelpText>Specify the unit price for VentureCrowd trust.</inlineHelpText>
    <label>VentureCrowd trust unit price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>