common/force-app/main/default/objects/Raise__c/fields/Form_Video_Link__c.field-meta.xml
<CustomField>
    <fullName>Form_Video_Link__c</fullName>
    <description>This field contains a link to a video related to the company or investment.</description>
    <inlineHelpText>Provide a link to a relevant video.</inlineHelpText>
    <label>Video Link</label>
    <type>Url</type>
</CustomField>