common/force-app/main/default/objects/Raise__c/fields/Form_Website__c.field-meta.xml
<CustomField>
    <fullName>Form_Website__c</fullName>
    <description>This field contains the URL of the company&apos;s website.</description>
    <inlineHelpText>Provide the URL for your company&apos;s website.</inlineHelpText>
    <label>Website</label>
    <type>Url</type>
</CustomField>