common/force-app/main/default/objects/Raise__c/fields/Form_X_Twitter__c.field-meta.xml
<CustomField>
    <fullName>Form_X_Twitter__c</fullName>
    <description>This field contains the URL of the company&apos;s X (Twitter) page.</description>
    <inlineHelpText>Provide the URL for your company&apos;s X (Twitter) page.</inlineHelpText>
    <label>X (Twitter)</label>
    <type>Url</type>
</CustomField>