common/force-app/main/default/objects/Raise__c/fields/Form_Youtube__c.field-meta.xml
<CustomField>
    <fullName>Form_Youtube__c</fullName>
    <description>This field contains the URL of the company&apos;s YouTube channel.</description>
    <inlineHelpText>Provide the URL for your company&apos;s YouTube channel.</inlineHelpText>
    <label>Youtube</label>
    <type>Url</type>
</CustomField>