common/force-app/main/default/objects/Raise__c/fields/Founder_Information_is_correct__c.field-meta.xml
<CustomField>
    <fullName>Founder_Information_is_correct__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field indicates whether the founder information provided is correct.</description>
    <inlineHelpText>Check this box if the founder information provided is correct.</inlineHelpText>
    <label>Information is correct</label>
    <type>Checkbox</type>
</CustomField>