common/force-app/main/default/objects/Raise__c/fields/Fund_name__c.field-meta.xml
<CustomField>
    <fullName>Fund_name__c</fullName>
    <label>Fund name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>