common/force-app/main/default/objects/Raise__c/fields/Fund_one_liner__c.field-meta.xml
<CustomField>
    <fullName>Fund_one_liner__c</fullName>
    <label>Fund one liner</label>
    <type>TextArea</type>
</CustomField>