common/force-app/main/default/objects/Raise__c/fields/Fund_the_offer__c.field-meta.xml
<CustomField>
    <fullName>Fund_the_offer__c</fullName>
    <defaultValue>&quot;This investment opportunity is open for wholesale and pre-approved investors and you can invest from just&quot;</defaultValue>
    <label>Fund the offer</label>
    <length>400</length>
    <type>LongTextArea</type>
</CustomField>