common/force-app/main/default/objects/Raise__c/fields/Generate_Trust_Deed__c.field-meta.xml
<CustomField>
    <fullName>Generate_Trust_Deed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generate Trust Deed</label>
    <type>Checkbox</type>
</CustomField>