common/force-app/main/default/objects/Raise__c/fields/Investment_term__c.field-meta.xml
<CustomField>
    <fullName>Investment_term__c</fullName>
    <label>Investment term</label>
    <length>30</length>
    <type>Text</type>
</CustomField>