common/force-app/main/default/objects/Raise__c/fields/Last_Raise_Status_Update__c.field-meta.xml
<CustomField>
    <fullName>Last_Raise_Status_Update__c</fullName>
    <label>Last Raise Status Update</label>
    <length>100</length>
    <type>Text</type>
</CustomField>