common/force-app/main/default/objects/Raise__c/fields/Learning__c.field-meta.xml
<CustomField>
    <fullName>Learning__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The learning record associated to this raise</description>
    <inlineHelpText>Please link an existing learning record</inlineHelpText>
    <label>Learning</label>
    <referenceTo>Learning__c</referenceTo>
    <relationshipLabel>Raise</relationshipLabel>
    <relationshipName>Raise</relationshipName>
    <type>Lookup</type>
</CustomField>