common/force-app/main/default/objects/Raise__c/fields/Learning_completed__c.field-meta.xml
<CustomField>
    <fullName>Learning_completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field indicates whether the learning has been completed.</description>
    <inlineHelpText>Check this box if the learning has been completed.</inlineHelpText>
    <label>Learning completed</label>
    <type>Checkbox</type>
</CustomField>