common/force-app/main/default/objects/Raise__c/fields/Multiple_Devices_Acknowledgement__c.field-meta.xml
<CustomField>
    <fullName>Multiple_Devices_Acknowledgement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This indicates that the user has acknowledge the following warning: Do not edit and save simultaneously across devices as data may be lost</description>
    <inlineHelpText>This indicates that the user has acknowledge the following warning: Do not edit and save simultaneously across devices as data may be lost</inlineHelpText>
    <label>Multiple Devices Acknowledgement</label>
    <type>Checkbox</type>
</CustomField>