common/force-app/main/default/objects/Raise__c/fields/No_Fees_Payable__c.field-meta.xml
<CustomField>
    <fullName>No_Fees_Payable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Advises if there are No Fees payable by investors on this raise. This is relevant as we do not charge fees on our OWN raises.</description>
    <label>No Fees Payable</label>
    <type>Checkbox</type>
</CustomField>