common/force-app/main/default/objects/Raise__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field specifies the owner of the record.</description>
    <inlineHelpText>Select the owner of this record.</inlineHelpText>
    <label>Internal Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Raise1</relationshipName>
    <type>Lookup</type>
</CustomField>