common/force-app/main/default/objects/Raise__c/fields/Payment_received__c.field-meta.xml
<CustomField>
    <fullName>Payment_received__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field indicates whether the payment has been received.</description>
    <inlineHelpText>Check this box if the payment has been received.</inlineHelpText>
    <label>Payment received</label>
    <type>Checkbox</type>
</CustomField>