common/force-app/main/default/objects/Raise__c/fields/Preraise_completed__c.field-meta.xml
<CustomField>
    <fullName>Preraise_completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field indicates whether the pre-raise activities have been completed.</description>
    <inlineHelpText>Check this box if the pre-raise activities have been completed.</inlineHelpText>
    <label>Preraise completed</label>
    <type>Checkbox</type>
</CustomField>