common/force-app/main/default/objects/Raise__c/fields/Preview_Page_URL__c.field-meta.xml
<CustomField>
    <fullName>Preview_Page_URL__c</fullName>
    <formula>HYPERLINK(
    &quot;https://www.venturecrowd.com.au/s/portal/my-companies/edit-raise/preview?id=&quot; &amp; Id,
    &quot;Click to view Page Preview&quot;,
    &quot;_blank&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Preview Page URL</label>
    <type>Text</type>
</CustomField>