common/force-app/main/default/objects/Raise__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field specifies the product related to this record.</description>
    <inlineHelpText>Select the product related to this record.</inlineHelpText>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Raise</relationshipLabel>
    <relationshipName>Raise</relationshipName>
    <type>Lookup</type>
</CustomField>