common/force-app/main/default/objects/Raise__c/fields/Publish_on_Community_Site__c.field-meta.xml
<CustomField>
    <fullName>Publish_on_Community_Site__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be automatically checked once the Tile Banner field is populated and the Status is set to &quot;Live in VC Website&quot;</description>
    <inlineHelpText>This field will be automatically checked once the Tile Banner field is populated and the Status is set to &quot;Live in VC Website&quot;</inlineHelpText>
    <label>Publish on Community Site</label>
    <type>Checkbox</type>
</CustomField>