common/force-app/main/default/objects/Raise__c/fields/Published_Raise_URL__c.field-meta.xml
<CustomField>
    <fullName>Published_Raise_URL__c</fullName>
    <inlineHelpText>This field is to be filled with the Raise deal page URL</inlineHelpText>
    <label>Published Raise URL</label>
    <type>Url</type>
</CustomField>