common/force-app/main/default/objects/Raise__c/fields/Raise_Progress__c.field-meta.xml
<CustomField>
    <fullName>Raise_Progress__c</fullName>
    <formula>IF(  Form_Target_amount__c  &gt; 0,
MIN(( Value_of_Applications__c / Form_Target_amount__c ), 1),
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Raise Progress</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>