common/force-app/main/default/objects/Raise__c/fields/Share_Price__c.field-meta.xml
<CustomField>
    <fullName>Share_Price__c</fullName>
    <description>This field indicates the price per share (NOT CALCULATED)</description>
    <label>Share Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>