common/force-app/main/default/objects/Raise__c/fields/Show_Comments__c.field-meta.xml
<CustomField>
    <fullName>Show_Comments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Comments Section</label>
    <type>Checkbox</type>
</CustomField>