common/force-app/main/default/objects/Raise__c/fields/Subscription__c.field-meta.xml
<CustomField>
    <fullName>Subscription__c</fullName>
    <label>Subscription</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard Subscription</fullName>
            </value>
            <value>
                <fullName>Premium Subscription</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>