common/force-app/main/default/objects/Raise__c/fields/Target_Return__c.field-meta.xml
<CustomField>
    <fullName>Target_Return__c</fullName>
    <label>Target return</label>
    <length>30</length>
    <type>Text</type>
</CustomField>