common/force-app/main/default/objects/Raise__c/fields/Tile_Banner__c.field-meta.xml
<CustomField>
    <fullName>Tile_Banner__c</fullName>
    <description>This tile banner will be used to be displayed in the Website.
This tile banner URL will also be synched up with the Product Tile Banner Field.</description>
    <inlineHelpText>This tile banner will be used to be displayed in the Website, please create and update the URL in this field for the Tile Banner.</inlineHelpText>
    <label>Tile Banner</label>
    <type>Url</type>
</CustomField>