common/force-app/main/default/objects/Raise__c/fields/Trust_Deed__c.field-meta.xml
<CustomField>
    <fullName>Trust_Deed__c</fullName>
    <inlineHelpText>Please use this field to add the downloadable URL of the related trust deed. (This field will only be shown for Wholesale deals)</inlineHelpText>
    <label>Trust Deed Link</label>
    <type>Url</type>
</CustomField>