common/force-app/main/default/objects/Raise__c/fields/Trust_Deed_Name__c.field-meta.xml
<CustomField>
    <fullName>Trust_Deed_Name__c</fullName>
    <inlineHelpText>Please type in the Trust need name here. (This field will only be shown for Wholesale deals)</inlineHelpText>
    <label>Trust Deed Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>