common/force-app/main/default/objects/Raise__c/fields/Trust_Number__c.field-meta.xml
<CustomField>
    <fullName>Trust_Number__c</fullName>
    <displayFormat>{0000}</displayFormat>
    <label>Trust Number</label>
    <type>AutoNumber</type>
</CustomField>