common/force-app/main/default/objects/Raise__c/fields/Update_Alert__c.field-meta.xml
<CustomField>
    <fullName>Update_Alert__c</fullName>
    <formula>IF(
    OR(
        ISPICKVAL(Status__c, &quot;Published&quot;),
        ISPICKVAL(Status__c, &quot;Closed&quot;)
    ),
    &quot;🟢 Published/Closed&quot;,
    IF(
          (TODAY() - DATEVALUE(LastModifiedDate)) &lt; 15,
         &quot;🟢 on time&quot;,
            IF(
                AND(
                    (TODAY() - DATEVALUE(LastModifiedDate)) &gt;= 15,
                    (TODAY() - DATEVALUE(LastModifiedDate)) &lt;= 30
                ),
                &quot;🟠 over 15d&quot;,
                IF(
                    (TODAY() - DATEVALUE(LastModifiedDate)) &gt; 30,
                    &quot;🔴 over 30d&quot;,
                    &quot;&quot;
                   )
                )
              )
       )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Days since the Raise Record was Last Modified/Updated</inlineHelpText>
    <label>Last Raise Update Alert</label>
    <type>Text</type>
</CustomField>