common/force-app/main/default/objects/Raise__c/fields/Value_of_Applications__c.field-meta.xml
<CustomField>
    <fullName>Value_of_Applications__c</fullName>
    <label>Value of Applications</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>