common/force-app/main/default/objects/Raise__c/recordTypes/Fund.recordType-meta.xml
<RecordType>
    <fullName>Fund</fullName>
    <active>true</active>
    <description>Use it only to raise Funds</description>
    <label>Fund</label>
</RecordType>