common/force-app/main/default/objects/Raise__c/recordTypes/Primary_Raise.recordType-meta.xml
<RecordType>
    <fullName>Primary_Raise</fullName>
    <active>true</active>
    <description>Main raise record type</description>
    <label>Primary Raise</label>
</RecordType>